src/maths_parser.output
Terminals unused in grammar

   T_CHAR
   T_DOUBLE
   T_ELSE
   T_FLOAT
   T_FOR
   T_IF
   T_INT
   T_LONG
   T_RETURN
   T_WHILE
   T_SEMICOLON
   T_RCURLY_BRACKET
   T_LCURLY_BRACKET


State 17 conflicts: 3 shift/reduce
State 21 conflicts: 1 shift/reduce
State 22 conflicts: 2 shift/reduce
State 26 conflicts: 1 shift/reduce
State 33 conflicts: 13 shift/reduce
State 80 conflicts: 13 shift/reduce
State 93 conflicts: 2 shift/reduce
State 94 conflicts: 2 shift/reduce
State 102 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR
    2     | EXPR ROOT
    3     | ROOT EXPR

    4 PRIMARY_EXPRESSION: T_IDENTIFIER
    5                   | CONSTANT
    6                   | T_STRING
    7                   | T_LBRACKET EXPR T_RBRACKET

    8 CONSTANT: T_DEC_INT
    9         | T_OCTAL_INT

   10 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
   11                   | POSTFIX_EXPRESSION T_LSQ_BRACKET EXPR T_RSQ_BRACKET
   12                   | POSTFIX_EXPRESSION T_EMPTY_BRACKETS
   13                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET
   14                   | POSTFIX_EXPRESSION T_DOT T_IDENTIFIER
   15                   | POSTFIX_EXPRESSION T_ARROW T_IDENTIFIER
   16                   | POSTFIX_EXPRESSION T_INCREMENT
   17                   | POSTFIX_EXPRESSION T_DECREMENT

   18 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
   19                         | ARGUMENT_EXPRESSION_LIST T_COMMA ASSIGNMENT_EXPRESSION

   20 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   21                 | T_INCREMENT UNARY_EXPRESSION
   22                 | T_DECREMENT UNARY_EXPRESSION
   23                 | UNARY_OPERATOR CAST_EXPRESSION

   24 UNARY_OPERATOR: T_AND
   25               | T_TIMES
   26               | T_PLUS
   27               | T_MINUS
   28               | T_BITWISE_NOT
   29               | T_LOGICAL_NOT

   30 CAST_EXPRESSION: UNARY_EXPRESSION

   31 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   32                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
   33                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
   34                          | MULTIPLICATIVE_EXPRESSION T_MODULO CAST_EXPRESSION

   35 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   36                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   37                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   38 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   39                 | SHIFT_EXPRESSION T_LEFT_SHIFT ADDITIVE_EXPRESSION
   40                 | SHIFT_EXPRESSION T_RIGHT_SHIFT ADDITIVE_EXPRESSION

   41 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   42                      | RELATIONAL_EXPRESSION T_LESS_THAN SHIFT_EXPRESSION
   43                      | RELATIONAL_EXPRESSION T_GREATER_THAN SHIFT_EXPRESSION
   44                      | RELATIONAL_EXPRESSION T_LESS_THAN_OR_EQUAL_TO SHIFT_EXPRESSION
   45                      | RELATIONAL_EXPRESSION T_GREATER_THAN_OR_EQUAL_TO SHIFT_EXPRESSION

   46 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   47                    | EQUALITY_EXPRESSION T_EQUALS_EQUALS RELATIONAL_EXPRESSION
   48                    | EQUALITY_EXPRESSION T_NOT_EQUALS_EQUALS RELATIONAL_EXPRESSION

   49 AND_EXPRESSION: EQUALITY_EXPRESSION
   50               | AND_EXPRESSION T_AND EQUALITY_EXPRESSION

   51 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   52                        | EXCLUSIVE_OR_EXPRESSION T_EXPONENT AND_EXPRESSION

   53 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   54                        | INCLUSIVE_OR_EXPRESSION T_OR EXCLUSIVE_OR_EXPRESSION

   55 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   56                       | LOGICAL_AND_EXPRESSION T_AND_AND INCLUSIVE_OR_EXPRESSION

   57 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   58                      | LOGICAL_OR_EXPRESSION T_OR_OR LOGICAL_AND_EXPRESSION

   59 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   60                       | LOGICAL_OR_EXPRESSION T_QUESTION EXPR T_COLON CONDITIONAL_EXPRESSION

   61 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   62                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   63 ASSIGNMENT_OPERATOR: T_EQUALS
   64                    | T_TIMES_EQUALS
   65                    | T_DIVIDE_EQUALS
   66                    | T_MODULO_EQUALS
   67                    | T_PLUS_EQUALS
   68                    | T_MINUS_EQUALS
   69                    | T_LEFT_SHIFT_EQUALS
   70                    | T_RIGHT_SHIFT_EQUALS
   71                    | T_AND_EQUALS
   72                    | T_XOR_EQUALS
   73                    | T_OR_EQUALS

   74 EXPR: ASSIGNMENT_EXPRESSION
   75     | EXPR T_COMMA ASSIGNMENT_EXPRESSION


Terminals, with rules where they appear

$end (0) 0
error (256)
T_CHAR (258)
T_DOUBLE (259)
T_ELSE (260)
T_FLOAT (261)
T_FOR (262)
T_IF (263)
T_INT (264)
T_LONG (265)
T_RETURN (266)
T_WHILE (267)
T_TIMES (268) 25 32
T_DIVIDE (269) 33
T_PLUS (270) 26 36
T_MINUS (271) 27 37
T_EXPONENT (272) 52
T_DECREMENT (273) 17 22
T_INCREMENT (274) 16 21
T_LESS_THAN (275) 42
T_GREATER_THAN (276) 43
T_EQUALS (277) 63
T_AND (278) 24 50
T_OR (279) 54
T_BITWISE_NOT (280) 28
T_LOGICAL_NOT (281) 29
T_AND_AND (282) 56
T_OR_OR (283) 58
T_MODULO_EQUALS (284) 66
T_LEFT_SHIFT_EQUALS (285) 69
T_RIGHT_SHIFT_EQUALS (286) 70
T_NOT_EQUALS_EQUALS (287) 48
T_EQUALS_EQUALS (288) 47
T_PLUS_EQUALS (289) 67
T_MINUS_EQUALS (290) 68
T_TIMES_EQUALS (291) 64
T_DIVIDE_EQUALS (292) 65
T_LESS_THAN_OR_EQUAL_TO (293) 44
T_GREATER_THAN_OR_EQUAL_TO (294) 45
T_AND_EQUALS (295) 71
T_OR_EQUALS (296) 73
T_XOR_EQUALS (297) 72
T_ARROW (298) 15
T_RIGHT_SHIFT (299) 40
T_LEFT_SHIFT (300) 39
T_MODULO (301) 34
T_COMMA (302) 19 75
T_DOT (303) 14
T_COLON (304) 60
T_SEMICOLON (305)
T_QUESTION (306) 60
T_LBRACKET (307) 7 13
T_RBRACKET (308) 7 13
T_LSQ_BRACKET (309) 11
T_RSQ_BRACKET (310) 11
T_RCURLY_BRACKET (311)
T_LCURLY_BRACKET (312)
T_EMPTY_BRACKETS (313) 12
T_DEC_INT (314) 8
T_OCTAL_INT (315) 9
T_IDENTIFIER (316) 4 14 15
T_STRING (317) 6


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
ROOT (64)
    on left: 1 2 3, on right: 0 2 3
PRIMARY_EXPRESSION (65)
    on left: 4 5 6 7, on right: 10
CONSTANT (66)
    on left: 8 9, on right: 5
POSTFIX_EXPRESSION (67)
    on left: 10 11 12 13 14 15 16 17, on right: 11 12 13 14 15 16 17
    20
ARGUMENT_EXPRESSION_LIST (68)
    on left: 18 19, on right: 13 19
UNARY_EXPRESSION (69)
    on left: 20 21 22 23, on right: 21 22 30 62
UNARY_OPERATOR (70)
    on left: 24 25 26 27 28 29, on right: 23
CAST_EXPRESSION (71)
    on left: 30, on right: 23 31 32 33 34
MULTIPLICATIVE_EXPRESSION (72)
    on left: 31 32 33 34, on right: 32 33 34 35 36 37
ADDITIVE_EXPRESSION (73)
    on left: 35 36 37, on right: 36 37 38 39 40
SHIFT_EXPRESSION (74)
    on left: 38 39 40, on right: 39 40 41 42 43 44 45
RELATIONAL_EXPRESSION (75)
    on left: 41 42 43 44 45, on right: 42 43 44 45 46 47 48
EQUALITY_EXPRESSION (76)
    on left: 46 47 48, on right: 47 48 49 50
AND_EXPRESSION (77)
    on left: 49 50, on right: 50 51 52
EXCLUSIVE_OR_EXPRESSION (78)
    on left: 51 52, on right: 52 53 54
INCLUSIVE_OR_EXPRESSION (79)
    on left: 53 54, on right: 54 55 56
LOGICAL_AND_EXPRESSION (80)
    on left: 55 56, on right: 56 57 58
LOGICAL_OR_EXPRESSION (81)
    on left: 57 58, on right: 58 59 60
CONDITIONAL_EXPRESSION (82)
    on left: 59 60, on right: 60 61
ASSIGNMENT_EXPRESSION (83)
    on left: 61 62, on right: 18 19 62 74 75
ASSIGNMENT_OPERATOR (84)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
EXPR (85)
    on left: 74 75, on right: 1 2 3 7 11 60 75


State 0

    0 $accept: . ROOT $end

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    ROOT                       go to state 14
    PRIMARY_EXPRESSION         go to state 15
    CONSTANT                   go to state 16
    POSTFIX_EXPRESSION         go to state 17
    UNARY_EXPRESSION           go to state 18
    UNARY_OPERATOR             go to state 19
    CAST_EXPRESSION            go to state 20
    MULTIPLICATIVE_EXPRESSION  go to state 21
    ADDITIVE_EXPRESSION        go to state 22
    SHIFT_EXPRESSION           go to state 23
    RELATIONAL_EXPRESSION      go to state 24
    EQUALITY_EXPRESSION        go to state 25
    AND_EXPRESSION             go to state 26
    EXCLUSIVE_OR_EXPRESSION    go to state 27
    INCLUSIVE_OR_EXPRESSION    go to state 28
    LOGICAL_AND_EXPRESSION     go to state 29
    LOGICAL_OR_EXPRESSION      go to state 30
    CONDITIONAL_EXPRESSION     go to state 31
    ASSIGNMENT_EXPRESSION      go to state 32
    EXPR                       go to state 33


State 1

   25 UNARY_OPERATOR: T_TIMES .

    $default  reduce using rule 25 (UNARY_OPERATOR)


State 2

   26 UNARY_OPERATOR: T_PLUS .

    $default  reduce using rule 26 (UNARY_OPERATOR)


State 3

   27 UNARY_OPERATOR: T_MINUS .

    $default  reduce using rule 27 (UNARY_OPERATOR)


State 4

   22 UNARY_EXPRESSION: T_DECREMENT . UNARY_EXPRESSION

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    PRIMARY_EXPRESSION  go to state 15
    CONSTANT            go to state 16
    POSTFIX_EXPRESSION  go to state 17
    UNARY_EXPRESSION    go to state 34
    UNARY_OPERATOR      go to state 19


State 5

   21 UNARY_EXPRESSION: T_INCREMENT . UNARY_EXPRESSION

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    PRIMARY_EXPRESSION  go to state 15
    CONSTANT            go to state 16
    POSTFIX_EXPRESSION  go to state 17
    UNARY_EXPRESSION    go to state 35
    UNARY_OPERATOR      go to state 19


State 6

   24 UNARY_OPERATOR: T_AND .

    $default  reduce using rule 24 (UNARY_OPERATOR)


State 7

   28 UNARY_OPERATOR: T_BITWISE_NOT .

    $default  reduce using rule 28 (UNARY_OPERATOR)


State 8

   29 UNARY_OPERATOR: T_LOGICAL_NOT .

    $default  reduce using rule 29 (UNARY_OPERATOR)


State 9

    7 PRIMARY_EXPRESSION: T_LBRACKET . EXPR T_RBRACKET

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    PRIMARY_EXPRESSION         go to state 15
    CONSTANT                   go to state 16
    POSTFIX_EXPRESSION         go to state 17
    UNARY_EXPRESSION           go to state 18
    UNARY_OPERATOR             go to state 19
    CAST_EXPRESSION            go to state 20
    MULTIPLICATIVE_EXPRESSION  go to state 21
    ADDITIVE_EXPRESSION        go to state 22
    SHIFT_EXPRESSION           go to state 23
    RELATIONAL_EXPRESSION      go to state 24
    EQUALITY_EXPRESSION        go to state 25
    AND_EXPRESSION             go to state 26
    EXCLUSIVE_OR_EXPRESSION    go to state 27
    INCLUSIVE_OR_EXPRESSION    go to state 28
    LOGICAL_AND_EXPRESSION     go to state 29
    LOGICAL_OR_EXPRESSION      go to state 30
    CONDITIONAL_EXPRESSION     go to state 31
    ASSIGNMENT_EXPRESSION      go to state 32
    EXPR                       go to state 36


State 10

    8 CONSTANT: T_DEC_INT .

    $default  reduce using rule 8 (CONSTANT)


State 11

    9 CONSTANT: T_OCTAL_INT .

    $default  reduce using rule 9 (CONSTANT)


State 12

    4 PRIMARY_EXPRESSION: T_IDENTIFIER .

    $default  reduce using rule 4 (PRIMARY_EXPRESSION)


State 13

    6 PRIMARY_EXPRESSION: T_STRING .

    $default  reduce using rule 6 (PRIMARY_EXPRESSION)


State 14

    0 $accept: ROOT . $end
    3 ROOT: ROOT . EXPR

    $end           shift, and go to state 37
    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    PRIMARY_EXPRESSION         go to state 15
    CONSTANT                   go to state 16
    POSTFIX_EXPRESSION         go to state 17
    UNARY_EXPRESSION           go to state 18
    UNARY_OPERATOR             go to state 19
    CAST_EXPRESSION            go to state 20
    MULTIPLICATIVE_EXPRESSION  go to state 21
    ADDITIVE_EXPRESSION        go to state 22
    SHIFT_EXPRESSION           go to state 23
    RELATIONAL_EXPRESSION      go to state 24
    EQUALITY_EXPRESSION        go to state 25
    AND_EXPRESSION             go to state 26
    EXCLUSIVE_OR_EXPRESSION    go to state 27
    INCLUSIVE_OR_EXPRESSION    go to state 28
    LOGICAL_AND_EXPRESSION     go to state 29
    LOGICAL_OR_EXPRESSION      go to state 30
    CONDITIONAL_EXPRESSION     go to state 31
    ASSIGNMENT_EXPRESSION      go to state 32
    EXPR                       go to state 38


State 15

   10 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION .

    $default  reduce using rule 10 (POSTFIX_EXPRESSION)


State 16

    5 PRIMARY_EXPRESSION: CONSTANT .

    $default  reduce using rule 5 (PRIMARY_EXPRESSION)


State 17

   11 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION . T_LSQ_BRACKET EXPR T_RSQ_BRACKET
   12                   | POSTFIX_EXPRESSION . T_EMPTY_BRACKETS
   13                   | POSTFIX_EXPRESSION . T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET
   14                   | POSTFIX_EXPRESSION . T_DOT T_IDENTIFIER
   15                   | POSTFIX_EXPRESSION . T_ARROW T_IDENTIFIER
   16                   | POSTFIX_EXPRESSION . T_INCREMENT
   17                   | POSTFIX_EXPRESSION . T_DECREMENT
   20 UNARY_EXPRESSION: POSTFIX_EXPRESSION .

    T_DECREMENT       shift, and go to state 39
    T_INCREMENT       shift, and go to state 40
    T_ARROW           shift, and go to state 41
    T_DOT             shift, and go to state 42
    T_LBRACKET        shift, and go to state 43
    T_LSQ_BRACKET     shift, and go to state 44
    T_EMPTY_BRACKETS  shift, and go to state 45

    T_DECREMENT  [reduce using rule 20 (UNARY_EXPRESSION)]
    T_INCREMENT  [reduce using rule 20 (UNARY_EXPRESSION)]
    T_LBRACKET   [reduce using rule 20 (UNARY_EXPRESSION)]
    $default     reduce using rule 20 (UNARY_EXPRESSION)


State 18

   30 CAST_EXPRESSION: UNARY_EXPRESSION .
   62 ASSIGNMENT_EXPRESSION: UNARY_EXPRESSION . ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

    T_EQUALS              shift, and go to state 46
    T_MODULO_EQUALS       shift, and go to state 47
    T_LEFT_SHIFT_EQUALS   shift, and go to state 48
    T_RIGHT_SHIFT_EQUALS  shift, and go to state 49
    T_PLUS_EQUALS         shift, and go to state 50
    T_MINUS_EQUALS        shift, and go to state 51
    T_TIMES_EQUALS        shift, and go to state 52
    T_DIVIDE_EQUALS       shift, and go to state 53
    T_AND_EQUALS          shift, and go to state 54
    T_OR_EQUALS           shift, and go to state 55
    T_XOR_EQUALS          shift, and go to state 56

    $default  reduce using rule 30 (CAST_EXPRESSION)

    ASSIGNMENT_OPERATOR  go to state 57


State 19

   23 UNARY_EXPRESSION: UNARY_OPERATOR . CAST_EXPRESSION

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    PRIMARY_EXPRESSION  go to state 15
    CONSTANT            go to state 16
    POSTFIX_EXPRESSION  go to state 17
    UNARY_EXPRESSION    go to state 58
    UNARY_OPERATOR      go to state 19
    CAST_EXPRESSION     go to state 59


State 20

   31 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION .

    $default  reduce using rule 31 (MULTIPLICATIVE_EXPRESSION)


State 21

   32 MULTIPLICATIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION . T_TIMES CAST_EXPRESSION
   33                          | MULTIPLICATIVE_EXPRESSION . T_DIVIDE CAST_EXPRESSION
   34                          | MULTIPLICATIVE_EXPRESSION . T_MODULO CAST_EXPRESSION
   35 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION .

    T_TIMES   shift, and go to state 60
    T_DIVIDE  shift, and go to state 61
    T_MODULO  shift, and go to state 62

    T_TIMES   [reduce using rule 35 (ADDITIVE_EXPRESSION)]
    $default  reduce using rule 35 (ADDITIVE_EXPRESSION)


State 22

   36 ADDITIVE_EXPRESSION: ADDITIVE_EXPRESSION . T_PLUS MULTIPLICATIVE_EXPRESSION
   37                    | ADDITIVE_EXPRESSION . T_MINUS MULTIPLICATIVE_EXPRESSION
   38 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION .

    T_PLUS   shift, and go to state 63
    T_MINUS  shift, and go to state 64

    T_PLUS    [reduce using rule 38 (SHIFT_EXPRESSION)]
    T_MINUS   [reduce using rule 38 (SHIFT_EXPRESSION)]
    $default  reduce using rule 38 (SHIFT_EXPRESSION)


State 23

   39 SHIFT_EXPRESSION: SHIFT_EXPRESSION . T_LEFT_SHIFT ADDITIVE_EXPRESSION
   40                 | SHIFT_EXPRESSION . T_RIGHT_SHIFT ADDITIVE_EXPRESSION
   41 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION .

    T_RIGHT_SHIFT  shift, and go to state 65
    T_LEFT_SHIFT   shift, and go to state 66

    $default  reduce using rule 41 (RELATIONAL_EXPRESSION)


State 24

   42 RELATIONAL_EXPRESSION: RELATIONAL_EXPRESSION . T_LESS_THAN SHIFT_EXPRESSION
   43                      | RELATIONAL_EXPRESSION . T_GREATER_THAN SHIFT_EXPRESSION
   44                      | RELATIONAL_EXPRESSION . T_LESS_THAN_OR_EQUAL_TO SHIFT_EXPRESSION
   45                      | RELATIONAL_EXPRESSION . T_GREATER_THAN_OR_EQUAL_TO SHIFT_EXPRESSION
   46 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION .

    T_LESS_THAN                 shift, and go to state 67
    T_GREATER_THAN              shift, and go to state 68
    T_LESS_THAN_OR_EQUAL_TO     shift, and go to state 69
    T_GREATER_THAN_OR_EQUAL_TO  shift, and go to state 70

    $default  reduce using rule 46 (EQUALITY_EXPRESSION)


State 25

   47 EQUALITY_EXPRESSION: EQUALITY_EXPRESSION . T_EQUALS_EQUALS RELATIONAL_EXPRESSION
   48                    | EQUALITY_EXPRESSION . T_NOT_EQUALS_EQUALS RELATIONAL_EXPRESSION
   49 AND_EXPRESSION: EQUALITY_EXPRESSION .

    T_NOT_EQUALS_EQUALS  shift, and go to state 71
    T_EQUALS_EQUALS      shift, and go to state 72

    $default  reduce using rule 49 (AND_EXPRESSION)


State 26

   50 AND_EXPRESSION: AND_EXPRESSION . T_AND EQUALITY_EXPRESSION
   51 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION .

    T_AND  shift, and go to state 73

    T_AND     [reduce using rule 51 (EXCLUSIVE_OR_EXPRESSION)]
    $default  reduce using rule 51 (EXCLUSIVE_OR_EXPRESSION)


State 27

   52 EXCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION . T_EXPONENT AND_EXPRESSION
   53 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION .

    T_EXPONENT  shift, and go to state 74

    $default  reduce using rule 53 (INCLUSIVE_OR_EXPRESSION)


State 28

   54 INCLUSIVE_OR_EXPRESSION: INCLUSIVE_OR_EXPRESSION . T_OR EXCLUSIVE_OR_EXPRESSION
   55 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION .

    T_OR  shift, and go to state 75

    $default  reduce using rule 55 (LOGICAL_AND_EXPRESSION)


State 29

   56 LOGICAL_AND_EXPRESSION: LOGICAL_AND_EXPRESSION . T_AND_AND INCLUSIVE_OR_EXPRESSION
   57 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION .

    T_AND_AND  shift, and go to state 76

    $default  reduce using rule 57 (LOGICAL_OR_EXPRESSION)


State 30

   58 LOGICAL_OR_EXPRESSION: LOGICAL_OR_EXPRESSION . T_OR_OR LOGICAL_AND_EXPRESSION
   59 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION .
   60                       | LOGICAL_OR_EXPRESSION . T_QUESTION EXPR T_COLON CONDITIONAL_EXPRESSION

    T_OR_OR     shift, and go to state 77
    T_QUESTION  shift, and go to state 78

    $default  reduce using rule 59 (CONDITIONAL_EXPRESSION)


State 31

   61 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION .

    $default  reduce using rule 61 (ASSIGNMENT_EXPRESSION)


State 32

   74 EXPR: ASSIGNMENT_EXPRESSION .

    $default  reduce using rule 74 (EXPR)


State 33

    1 ROOT: EXPR .
    2     | EXPR . ROOT
   75 EXPR: EXPR . T_COMMA ASSIGNMENT_EXPRESSION

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_COMMA        shift, and go to state 79
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13

    T_TIMES        [reduce using rule 1 (ROOT)]
    T_PLUS         [reduce using rule 1 (ROOT)]
    T_MINUS        [reduce using rule 1 (ROOT)]
    T_DECREMENT    [reduce using rule 1 (ROOT)]
    T_INCREMENT    [reduce using rule 1 (ROOT)]
    T_AND          [reduce using rule 1 (ROOT)]
    T_BITWISE_NOT  [reduce using rule 1 (ROOT)]
    T_LOGICAL_NOT  [reduce using rule 1 (ROOT)]
    T_LBRACKET     [reduce using rule 1 (ROOT)]
    T_DEC_INT      [reduce using rule 1 (ROOT)]
    T_OCTAL_INT    [reduce using rule 1 (ROOT)]
    T_IDENTIFIER   [reduce using rule 1 (ROOT)]
    T_STRING       [reduce using rule 1 (ROOT)]
    $default       reduce using rule 1 (ROOT)

    ROOT                       go to state 80
    PRIMARY_EXPRESSION         go to state 15
    CONSTANT                   go to state 16
    POSTFIX_EXPRESSION         go to state 17
    UNARY_EXPRESSION           go to state 18
    UNARY_OPERATOR             go to state 19
    CAST_EXPRESSION            go to state 20
    MULTIPLICATIVE_EXPRESSION  go to state 21
    ADDITIVE_EXPRESSION        go to state 22
    SHIFT_EXPRESSION           go to state 23
    RELATIONAL_EXPRESSION      go to state 24
    EQUALITY_EXPRESSION        go to state 25
    AND_EXPRESSION             go to state 26
    EXCLUSIVE_OR_EXPRESSION    go to state 27
    INCLUSIVE_OR_EXPRESSION    go to state 28
    LOGICAL_AND_EXPRESSION     go to state 29
    LOGICAL_OR_EXPRESSION      go to state 30
    CONDITIONAL_EXPRESSION     go to state 31
    ASSIGNMENT_EXPRESSION      go to state 32
    EXPR                       go to state 33


State 34

   22 UNARY_EXPRESSION: T_DECREMENT UNARY_EXPRESSION .

    $default  reduce using rule 22 (UNARY_EXPRESSION)


State 35

   21 UNARY_EXPRESSION: T_INCREMENT UNARY_EXPRESSION .

    $default  reduce using rule 21 (UNARY_EXPRESSION)


State 36

    7 PRIMARY_EXPRESSION: T_LBRACKET EXPR . T_RBRACKET
   75 EXPR: EXPR . T_COMMA ASSIGNMENT_EXPRESSION

    T_COMMA     shift, and go to state 79
    T_RBRACKET  shift, and go to state 81


State 37

    0 $accept: ROOT $end .

    $default  accept


State 38

    3 ROOT: ROOT EXPR .
   75 EXPR: EXPR . T_COMMA ASSIGNMENT_EXPRESSION

    T_COMMA  shift, and go to state 79

    $default  reduce using rule 3 (ROOT)


State 39

   17 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION T_DECREMENT .

    $default  reduce using rule 17 (POSTFIX_EXPRESSION)


State 40

   16 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION T_INCREMENT .

    $default  reduce using rule 16 (POSTFIX_EXPRESSION)


State 41

   15 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION T_ARROW . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 82


State 42

   14 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION T_DOT . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 83


State 43

   13 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION T_LBRACKET . ARGUMENT_EXPRESSION_LIST T_RBRACKET

    T_TIMES        shift, and go to state 1
    T_PLUS         shift, and go to state 2
    T_MINUS        shift, and go to state 3
    T_DECREMENT    shift, and go to state 4
    T_INCREMENT    shift, and go to state 5
    T_AND          shift, and go to state 6
    T_BITWISE_NOT  shift, and go to state 7
    T_LOGICAL_NOT  shift, and go to state 8
    T_LBRACKET     shift, and go to state 9
    T_DEC_INT      shift, and go to state 10
    T_OCTAL_INT    shift, and go to state 11
    T_IDENTIFIER   shift, and go to state 12
    T_STRING       shift, and go to state 13
